compiler/tests/fail/arm-m4/intrinsic_cmpS.jazz
export
fn main(reg u32 x) -> reg u32 {
    reg bool zf;
    ?{ "ZF" = zf } = #CMPS(x, 10);
    x = 1 if zf;
    return x;
}
